--- a/Capstone.tex
+++ b/Capstone.tex
@@ -149,7 +149,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, sharp corners, boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, enhanced, frame hidden, interior hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, frame hidden, sharp corners, breakable]}{\end{tcolorbox}}\fi
 
 \hypertarget{business-objectives}{%
 \section{Business Objectives}\label{business-objectives}}
@@ -186,9 +186,9 @@ efficient.
 Business question: What is the effect of the operator on the overall
 energy usage of the truck?
 
-The term operator inputs are in this project limmeted to accelerator
+The term operator inputs are in this project limited to accelerator
 pedal which is the input for accelerate the truck, and hoist-lever which
-is used for lifting/acellerating the load vertically.
+is used for lifting/accelerating the load vertically.
 
 
 
